2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/18_WhileString.deca
// Description:
//    Programme  while dont la condition est une chaine de caractère 
// Resultats:
//      programme correcte syntaxiquement, invalide contextuellement
//
// Historique:
//    cree le 09/01/2024

{
    int a =0;
    while(a < 5)
    {
        print("je suis dans while ");
        a = a+1;
    }
}