2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/17_WhileSansCond.deca
// Description:
//    tests de programme while sans condition
//
// Resultats:
//    ligne 10  : Erreur,  mismatched input ')'
//
// Historique:
//    cree le 09/01/2024
{ 
    while(){
        print("je suis dans while");
    }
}